# trenni

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: smoke-test.sh
tests/: conftest.py  test_bundle_config_pod_name.py  test_config.py  test_control_api.py  test_input_artifacts_propagation.py  test_isolation.py  test_observation_aggregator.py  test_observation_emission.py  test_observation_threshold.py  test_optimizer_output.py  test_podman_backend.py  test_runtime_builder.py  test_scheduler.py  test_scheduler_capacity.py  test_state_structures.py  test_supervisor_observation_dedup.py  test_supervisor_queue.py  test_supervisor_team_resolution.py  test_team_config_pod_name.py  test_trigger_evaluator.py
trenni/: bundle_repository.py  checkpoint.py  cli.py  config.py  control_api.py  isolation.py  observation_aggregator.py  observation_analyzers.py  pasloe_client.py  podman_backend.py  replay.py  runtime_builder.py  runtime_types.py  scheduler.py  spawn_handler.py  state.py  supervisor.py  trigger_evaluator.py  workspace_manager.py
