[project]
name = "trenni"
version = "0.1.0"
description = "Minimal supervisor for Palimpsest job orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "pyyaml>=6.0",
    "uuid-utils>=0.14.1",
]

[project.scripts]
trenni = "trenni.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
